--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "promise": "7.1.1",
     "react": "^15.6.1",
     "react-dev-utils": "^3.0.2",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "style-loader": "0.18.2",
