--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
+    "pubsub-js": "^1.5.7",
     "react": "^15.6.1",
     "react-dev-utils": "^3.0.2",
     "react-dnd": "^2.4.0",
